[package]
name = "imagers"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-files = "0.1"
actix-service = "0.4"
actix-web = "1.0.0-rc"
actix-multipart = "0.1.1"
aes = "0.3"
block-cipher-trait = "0.6"
block-modes = "0.3"
bytes = "0.4"
derive_more = "0.14"
dotenv = "0.14.1"
env_logger = "0.5"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.6"
num-traits = "0.2"
futures = "0.1"
hex = "0.3"
rand = "0.6"
sha2 = "0.8"
lazy_static = "1.3"